<resources>
    <string name="app_name">签万得跑</string>
    <string name="tab1">社区</string>
    <string name="tab2">战队</string>
    <string name="tab3">轨迹</string>
    <string name="tab4">我的</string>
    <string name="kaishipaobu">开始跑步</string>
    <string name="kaoheqiandao">考核签到</string>
    <string name="wodejihua">训练计划</string>
    <string name="paobujilu">跑步记录</string>
    <string name="paobujiangli">跑步奖励</string>
    <string name="lishipaiming">历史排名</string>
    <string name="gerenzhuye">个人主页</string>
    <string name="jiruchengji">计入成绩</string>
    <string name="yipaolicheng">已跑里程</string>
    <string name="xueqimubiao">学期目标</string>
    <string name="dianjidenglu">点击登录</string>
    <string name="shuruzhanghao">输入账号</string>
    <string name="shurumima">输入密码</string>
    <string name="yonghuming">输入用户名：</string>
    <string name="shuruxuehao">输入学号：</string>
    <string name="xingbie">性别：</string>
    <string name="xuanzediqu">选择地区：</string>
    <string name="shuruxuexiao">选择学校：</string>
    <string name="zhuce">注册</string>
    <string name="dingzhijihua">智能计划</string>
    <string name="jiansheng">健身</string>
    <string name="shanchu">删除</string>
    <string name="tianjia">添加</string>
    <string name="yuefen">11月-12月</string>
    <string name="yundongleixing">运动类型</string>
    <string name="xunlianshijian">训练时间</string>
    <string name="wangjimima">忘记密码</string>
    <string name="buffering">Buffering</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="current_time">%1$d%2$d:%3$d%4$d:%5$d%6$d</string>
    <string name="quexiao">取消</string>
    <string name="fabudaoshequ">发布到社区</string>
    <string name="fasong">发送</string>
    <string name="fenxiangxinxianshi">分享新鲜事...</string>
    <string name="jibenziliao">基本资料</string>
    <string name="dengji">等级：</string>
    <string name="jifen">积分：</string>
    <string name="xuexiao">学校：</string>
    <string name="gerenqianming">个人签名</string>
    <string name="zhandui">战队：</string>
    <string name="zhegerenhenlan">这个人很懒，什么都没有留下。。。</string>
    <string name="shamiaomiaozhandui">傻缪缪战队</string>
    <string name="paiming">排名 ：</string>
    <string name="rongyaochengyuan">荣耀队员：</string>
    <string name="renqiduiyuan">人气队员：</string>
    <string name="lishizhanji">历史战绩：</string>
    <string name="s1">S1：最强王者</string>
    <string name="judian">战队据点：</string>
    <string name="tushuguan">图书馆（在S2赛季被帅韬韬战队夺走）</string>
    <string name="wuyue">5月</string>
    <string name="denglu">登录</string>
    <string name="guijijilu">轨迹记录</string>
    <string name="jifenzhongxin">积分中心</string>
    <string name="jifenmingxi">积分明细</string>
    <string name="dangqianjifen">当前积分：</string>
    <string name="jifenduihuan">积分兑换</string>
    <string name="shangchengxuangou">商城选购</string>
    <string name="xingyunchoujiang">幸运抽奖</string>
    <string name="remenduihuan">热门兑换</string>
    <string name="duihuanjifen">300积分</string>
    <string name="richangrenwu">日常任务</string>
    <string name="shequqiandao">社区签到</string>
    <string name="canyupinlun">参与评论</string>
    <string name="canjiabisai">参加比赛</string>
    <string name="bangdinshouji">绑定手机</string>
    <string name="jiajifen">+50积分</string>
    <string name="quqiandao">去签到</string>
    <string name="quwancheng">去完成</string>
    <string name="jiajifen100">+100积分</string>
    <string name="wuxianlanyaerji">无线蓝牙耳机</string>
    <string name="kucun">库存：</string>
    <string name="jian">99件</string>
    <string name="duihuan">兑换</string>
    <string name="xuexiaogonggao">学校公告</string>
    <string name="wodedingdan">我的订单</string>
    <string name="leibie">类别：标准套餐</string>
    <string name="gongji">共计：3个</string>
    <string name="shentisuzhi">身体素质</string>
    <string name="jinqingqidai">敬请期待</string>
    <string name="shurushoujihao">请输入手机号</string>
    <string name="shuruyanzhengma">请输入验证码</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="shuruxingming">输入姓名</string>
    <string name="bshuruxuehao">输入学号</string>
    <string name="jiaoyan">校验</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="shezhi">设置</string>
    <string name="yinsi">隐私</string>
    <string name="bangzhu">帮助与反馈</string>
    <string name="guanyu">关于</string>
    <string name="zhanghaoguanli">账号管理</string>
    <string name="shoujihao">手机号</string>
    <string name="zhanduiming">请输入战队名</string>
    <string name="chuangjian">创建</string>
    <string name="zuzhanrenyuan">组战人员</string>
    <string name="jinqitiaozhan">近期挑战</string>
    <string name="xuanzejianzhuwu">选择建筑物</string>
    <string name="qingdianjijianzhuwu">请点击地图上的建筑物命名。</string>
    <string name="saishixiangqin">赛事详情</string>
    <string name="canjia">参加赛事</string>
    <string name="tianqi">天气</string>
    <string name="nanjingshi">南京市</string>
    <string name="shishi">实时</string>
    <string name="shidu">湿度</string>
    <string name="fenli">风力</string>
    <string name="yundongjianyi">运动建议：</string>
    <string name="xiugaijihua">修改计划</string>
    <string name="kaishishijia">开始时间</string>
    <string name="jieshushijian">结束时间</string>
    <string name="biaoqian">标签</string>
    <string name="wancheng">完  成</string>
</resources>
