<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_yuan"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/geren_zhandui_touxiang"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/touxiang" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/geren_zhandui_mingzi"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/shamiaomiaozhandui"
            android:textColor="#101010"
            android:textSize="16dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paiming"
            android:textColor="#101010"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/geren_zhandui_paiming"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="#101010"
            android:textSize="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="19dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dengji"
            android:textColor="#101010"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/geren_zhandui_dengji"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textColor="#101010"
            android:textSize="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="19dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rongyaochengyuan"
            android:textColor="#101010"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/geren_zhandui_rongyaoduiyuan"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#101010"
            android:textSize="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="19dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renqiduiyuan"
            android:textColor="#101010"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/geren_zhandui_renqiduiyuan"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#101010"
            android:textSize="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="19dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lishizhanji"
            android:textColor="#101010"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/geren_zhandui_lishizhanji"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s1"
            android:textColor="#101010"
            android:textSize="15dp"/>
    </LinearLayout>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judian"
            android:textColor="#101010"
            android:textSize="15dp" />
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/geren_zhandui_rongyaochengyuan"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tushuguan"
            android:textColor="#101010"
            android:textSize="15dp"/>
        <ImageView
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/tushuguan"/>
    </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
