<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/item_shangping_tupian"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:scaleType="fitXY"
        android:src="@drawable/touxiang"/>
    <TextView
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/item_shangping_duihuan"
        android:id="@+id/item_shangping_name"
        android:layout_toRightOf="@id/item_shangping_tupian"
        android:layout_alignTop="@+id/item_shangping_tupian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wuxianlanyaerji"
        android:maxLines="1"
        android:textColor="#101010"/>
    <ImageView
        android:id="@+id/a1111"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/jifen"
        android:layout_below="@+id/item_shangping_name"
        android:layout_alignStart="@+id/item_shangping_name"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/item_shangping_jifen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/a1111"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/a1111"
        android:text="599"
        android:textColor="#FF9800" />

    <TextView
        android:id="@+id/a2222"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item_shangping_tupian"
        android:layout_toEndOf="@+id/item_shangping_tupian"
        android:text="@string/kucun" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/a2222"
        android:layout_toEndOf="@+id/a2222"
        android:text="@string/jian"
        android:id="@+id/item_shangping_kucun" />

    <TextView
        android:id="@+id/item_shangping_duihuan"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_above="@+id/item_shangping_kucun"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_marginEnd="18dp"
        android:background="@drawable/ed_dengluhuangse"
        android:textColor="#FF9800"
        android:text="@string/duihuan"/>
    <View
        android:layout_marginTop="10dp"
        android:layout_below="@id/item_shangping_tupian"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/xian"/>
</RelativeLayout>
