<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"

        android:background="@color/chunbai">

        <ImageView
            android:id="@+id/dingdan_tu"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/wuxianlanyaerji" />

        <TextView
            android:id="@+id/dingdan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/dingdan_tu"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/dingdan_tu"
            android:text="@string/wuxianlanyaerji"
            android:textColor="#101010"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/dingdan_leibie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dingdan_name"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/dingdan_tu"
            android:text="@string/leibie"
            android:textColor="#101010"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/dingdan_geshu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/dingdan_leibie"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/gongji"
            android:textColor="#101010"
            android:textSize="14dp" />
    </RelativeLayout>
</LinearLayout>
