<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yemianbeijin"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="65dp"
        android:background="@color/biaoti"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/zhucezhanghao_fanhui"
                android:layout_centerVertical="true"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/fanhui"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="注册账号"
                android:textColor="@color/text"
                android:textSize="20dp"
                />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
    android:layout_marginTop="50dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_width="match_parent"
    android:layout_height="40dp">
    <EditText
        android:id="@+id/zhuce_shoujihao"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/shurushoujihao"
        android:inputType="phone"
        android:background="@color/yemianbeijin"
        />
</LinearLayout>
    <View
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#A5A5A5"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/zhuce_yanzhengma"
            android:gravity="center_vertical"
            android:background="@color/yemianbeijin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/shuruyanzhengma"
            />

        <ruanjianbei.sport.mysport.zidingyi_view.Yanzhengma
            android:id="@+id/zhuce_huoquyanzhengma"
            android:gravity="center"
            android:layout_marginRight="@dimen/album_dp_10"
            android:layout_gravity="center_vertical"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:text="@string/huoquyanzhengma"
            android:textColor="@color/biaoti"
            android:background="@drawable/biankuang_lv" />
    </LinearLayout>
    <View
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#A5A5A5"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <EditText
            android:id="@+id/zhuce_mima"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/shurumima"
            android:background="@color/yemianbeijin"
            />
    </LinearLayout>
    <View
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#A5A5A5"/>

    <Button
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/bt_zhuce"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zhuce"/>
</LinearLayout>
