<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/chunbai">
    <RelativeLayout
        android:paddingTop="10dp"
        android:background="@color/chunbai"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="65dp">
        <TextView
            android:id="@+id/tv_fabiaoquxiao"
            android:layout_marginLeft="23dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#101010"
            android:textSize="14dp"
            android:text="@string/quexiao"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fabudaoshequ"
            android:textColor="#101010"
            android:textSize="16dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/tv_fabiaofasong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fasong"
            android:textColor="#101010"
            android:textSize="14dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="23dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/xian"/>
    <EditText
        android:id="@+id/et_fabiaoneirong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:background="@drawable/bg_fabiaotv"
        android:gravity="start"
        android:padding="10dp"
        android:hint="@string/fenxiangxinxianshi"
        android:textSize="14dp"
        />
    <ImageView
        android:layout_marginLeft="10dp"
        android:layout_width="@dimen/album_dp_100"
        android:layout_height="@dimen/album_dp_100"
        android:id="@+id/item_fabiao_jieping"
        android:visibility="gone"/>
    <GridView
        android:id="@+id/item_fabiao_tupian"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/xian"/>
    <LinearLayout
        android:background="@color/chunbai"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="60dp">
        <ImageView
          android:id="@+id/fabiao_paizhao"
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:src="@drawable/paizhao"
          android:layout_marginLeft="30dp"/>
        <ImageView
            android:id="@+id/fabiao_tupian"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/tupian"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>
</LinearLayout>
