<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/biaoti"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bangding_fanhui"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:src="@drawable/fanhui" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="绑定身份"
                android:textColor="@color/text"
                android:textSize="20dp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/bangding_xuehao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yemianbeijin"
            android:gravity="center_vertical"
            android:hint="@string/bshuruxuehao" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#A5A5A5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/bangding_xingming"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yemianbeijin"
            android:gravity="center_vertical"
            android:hint="@string/shuruxingming" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#A5A5A5" />

    <Button
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/bangding_jiaoyan"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jiaoyan"/>
</LinearLayout>
